DE510 - Android layout issue (mobile) fixed. US718 - New HTML for "how much, how often" US755 - Removal of completed questions

--- a/HTMLTemplates/scss/declaration.scss
+++ b/HTMLTemplates/scss/declaration.scss
@@ -56,6 +56,10 @@
 				   border: 1px solid #a2a2a2;
 			   }
 		   }
+		   &.dec-validation {
+			   border: 1px solid #df3034!important;
+			   background: #fef7f7;
+		   }
 		   &.secondary {
 			   margin-top: 1em;
 		   }
