--- a/HTMLTemplates/scss/finish.scss
+++ b/HTMLTemplates/scss/finish.scss
@@ -7,4 +7,8 @@
 		float: none;
 		margin: 1em 0 0 0;
 	}
+	
+	p.finish {
+		margin-top: 2em;
+	}
 }
