--- a/HTMLTemplates/scss/tables.scss
+++ b/HTMLTemplates/scss/tables.scss
@@ -2,7 +2,7 @@
 	   table {
 			text-align: left;
 			border-collapse: collapse;
-			width: 98%;
+			width: 100%;
 			@media screen and (max-width: 640px) {width: 100%;}
 			thead {
 				border: 1px solid #bfc1c3;
